# NuclearForces

./: .gitignore  .gitmodules  LICENSE.orig  README.md  README.md.temp
Scattering/: LICENSE  Manifest.toml  Project.toml  README.md  README_BACKUP_621069.md  README_LOCAL_621069.md
Scattering/src/: Scattering.jl  kmatrix.jl  methods.jl
Scattering/test/: runtests.jl
project1/: notater.org
project1/data/: data.csv  nijm.csv
project1/latex/: Appendix.tex  _region_.tex  bibliography.bib  main.tex
project1/latex/Sections/: Abstract.tex  Conclusion.tex  Frontpage.tex  Introduction.tex  Method.tex  Results.tex  Theory.tex
project1/latex/Setup/: macros.tex  style.sty
project1/notebook/: Experiments.ipynb  Project.ipynb  Untitled.ipynb
project1/src/: constants.mod  f90library.mod  integrationexample.cpp  makefile  out  tst.jl
project1/src/code2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code.cpp  main
project2/: notater.org
project2/latex/: Appendix.tex  bibliography.bib  main.tex
project2/latex/Sections/: Abstract.tex  Conclusion.tex  Discussion.tex  Frontpage.tex  Introduction.tex  Method.tex  Results.tex  Theory.tex
project2/latex/Setup/: macros.tex  style.sty
project2/notebooks/: Pionic Interactions.ipynb  linehelp.py  plottinghelp.jl  setup.jl
src/: constants.jl  potentials.jl  vpa.jl
